moved package in folder

--- a/src/ros_can_interface/CMakeLists.txt
+++ b/src/ros_can_interface/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   can_msgs
   std_msgs
   message_generation
-  ai_robot_status
+  robot_watcher
 )
 
 ## System dependencies are found with CMake's conventions
@@ -108,7 +108,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES can_interface
-  CATKIN_DEPENDS roscpp rospy std_msgs can_msgs ai_robot_status sender
+  CATKIN_DEPENDS roscpp rospy std_msgs can_msgs robot_watcher sender
   DEPENDS system_lib
 )
 
