--- a/src/ai/robot_watcher/package.xml
+++ b/src/ai/robot_watcher/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ai_robot_status</name>
+  <name>robot_watcher</name>
   <version>0.0.0</version>
-  <description>The ai_robot_status package
+  <description>The robot_watcher package
     Code deeply insparied by UTcoup 2018's code</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
@@ -20,7 +20,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ai_robot_status</url> -->
+  <!-- <url type="website">http://wiki.ros.org/robot_watcher</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
