--- a/src/ros_can_interface/package.xml
+++ b/src/ros_can_interface/package.xml
@@ -34,7 +34,7 @@
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>can_msgs</depend>
-  <depend>ai_robot_status</depend>
+  <depend>robot_watcher</depend>
   <depend>sender</depend>
   <exec_depend>message_runtime</exec_depend>
 
