--- a/src/ros_can/robot_interface/package.xml
+++ b/src/ros_can/robot_interface/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ros_can_interface</name>
+  <name>robot_interface</name>
   <version>0.0.0</version>
-  <description>The ros_can_interface package</description>
+  <description>The robot_interface package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
