--- a/src/ai/robot_watcher/CMakeLists.txt
+++ b/src/ai/robot_watcher/CMakeLists.txt
@@ -52,6 +52,7 @@ catkin_python_setup()
    FILES
    NodesStatus.msg
    RobotStatus.msg
+   SetSide.msg
  )
 
 ## Generate services in the 'srv' folder
