--- a/src/ros_can/robot_interface/CMakeLists.txt
+++ b/src/ros_can/robot_interface/CMakeLists.txt
@@ -50,11 +50,17 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+ add_message_files(
+   FILES
+   CurrSpeed.msg
+   PID.msg
+   Point.msg
+   PWMs.msg
+   Speed.msg
+   Status.msg
+   STMParam.msg
+   WheelsDistance.msg
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -108,7 +114,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES can_interface
-  CATKIN_DEPENDS roscpp rospy std_msgs can_msgs robot_watcher sender
+  CATKIN_DEPENDS roscpp rospy std_msgs can_msgs robot_watcher sender message_runtime
   DEPENDS system_lib
 )
 
@@ -131,12 +137,13 @@ include_directories(
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
- #add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
  add_executable(${PROJECT_NAME}_node src/robot_interface_node.cpp)
+
+ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
