add actions.config file path (not use)

--- a/param/server_param.yaml
+++ b/param/server_param.yaml
@@ -6,3 +6,7 @@ ai:
   robot_watcher:
     INIT_TIMEOUT: 15 #sec
     GAME_LENTH: 10 #sec
+
+  action_manager:
+    config_file: "action_manager/actions.config"
+S
