--- a/src/ai/scheduler/package.xml
+++ b/src/ai/scheduler/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>action_manager</name>
+  <name>scheduler</name>
   <version>0.0.0</version>
-  <description>The action_manager package</description>
+  <description>The scheduler package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/action_manager</url> -->
+  <!-- <url type="website">http://wiki.ros.org/scheduler</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
