--- a/src/ai/ai_msgs/package.xml
+++ b/src/ai/ai_msgs/package.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>robot_watcher</name>
+  <name>ai_msgs</name>
   <version>0.0.0</version>
-  <description>The robot_watcher package
-    Code deeply insparied by UTcoup 2018's code</description>
+  <description>The ai_msgs package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="robotik@todo.todo">robotik</maintainer>
+  <maintainer email="thenewby@todo.todo">thenewby</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -20,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/robot_watcher</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ai_msg</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -30,11 +29,11 @@
 
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <depend>std_msgs</depend>
-  <depend>ai_msgs</depend>
+
+  <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
+
+  <depend>std_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
