--- a/src/ai/robot_watcher/CMakeLists.txt
+++ b/src/ai/robot_watcher/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  message_generation
+  ai_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,34 +47,11 @@ catkin_python_setup()
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
-## Generate messages in the 'msg' folder
- add_message_files(
-   FILES
-   NodesStatus.msg
-   RobotStatus.msg
-   SetSide.msg
- )
-
-## Generate services in the 'srv' folder
- add_service_files(
-   FILES
-   NodeReadiness.srv
-   GetActionToDo.srv
-#   Service2.srv
- )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs
- )
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -108,7 +85,7 @@ catkin_python_setup()
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime ai_msgs
 #  DEPENDS system_lib
 )
 
@@ -127,8 +104,11 @@ include_directories(
  add_library(${PROJECT_NAME}
    src/RobotServices.cpp
  )
- add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
+ add_dependencies(${PROJECT_NAME}
+   ${catkin_EXPORTED_TARGETS}
+ )
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
