modifie action config file

--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -3,28 +3,41 @@
     {
       "name": "test1",
       "point": 99,
+      "difficulty" : 1,
       "PAction": {
         "start":{
-          "x": 0,
-          "y": 0
+          "x": 1000,
+          "y": 162
         },
         "end":{
-          "x": 0,
-          "y": 0
+          "x": 2000,
+          "y": 5
         }
       }
     },
     {
       "name": "test2",
       "point": 6,
+      "difficulty" : 1,
       "PAction": {
         "start":{
-          "x": 0,
-          "y": 0
+          "x": 3000,
+          "y": 1260
         },
         "end":{
-          "x": 0,
-          "y": 0
+          "x": 16,
+          "y": 20
+        }
+      }
+    },
+    {
+      "name": "test3",
+      "point": 3,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 3000,
+          "y": 1260
         }
       }
     }
