modify action.config for tests

--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -40,6 +40,17 @@
           "y": 1260
         }
       }
+    },
+    {
+      "name": "test4",
+      "point": 20,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 1000,
+          "y": 500
+        }
+      }
     }
   ]
 }
