added controller namespace

--- a/param/server_param.yaml
+++ b/param/server_param.yaml
@@ -9,3 +9,9 @@ ai:
 
   scheduler:
     config_file: "" #set in scheduler launch file
+
+  controller:
+      robot_pos:
+        x: 250
+        y: 250
+      procedures: [Move]
