can_msgs: Finish.msg

--- a/src/ros_can/can_msgs/CMakeLists.txt
+++ b/src/ros_can/can_msgs/CMakeLists.txt
@@ -12,6 +12,7 @@ add_message_files(DIRECTORY msg
     Frame.msg
     CurrSpeed.msg
     PID.msg
+    Finish.msg
     Point.msg
     PWMs.msg
     Speed.msg
