--- a/src/ai/ai_msgs/CMakeLists.txt
+++ b/src/ai/ai_msgs/CMakeLists.txt
@@ -4,7 +4,9 @@ project(ai_msgs)
 find_package(catkin REQUIRED
   COMPONENTS
     message_generation
+    actionlib_msgs
     std_msgs
+    #procedures_msgs
 )
 
 add_message_files(DIRECTORY msg
@@ -18,6 +20,7 @@ add_service_files(
   FILES
   GetActionToDo.srv
   NodeReadiness.srv
+  CurrentActionDone.srv
 )
 
 # add_action_files(
@@ -28,11 +31,13 @@ add_service_files(
 
 generate_messages(
   DEPENDENCIES
-    std_msgs
+  std_msgs
+  procedures_msgs
 )
 
 catkin_package(
   CATKIN_DEPENDS
     message_runtime
     std_msgs
+    #procedures_msgs
 )
