WIP: scheduler node

--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -1,54 +1,38 @@
 {
   "actions": [
     {
-      "name": "test1",
-      "point": 99,
-      "difficulty" : 1,
-      "PAction": {
-        "start":{
-          "x": 1000,
-          "y": 162
-        },
-        "end":{
-          "x": 2000,
-          "y": 5
-        }
-      }
-    },
-    {
-      "name": "test2",
-      "point": 6,
-      "difficulty" : 1,
-      "PAction": {
-        "start":{
-          "x": 3000,
-          "y": 1260
-        },
-        "end":{
-          "x": 16,
-          "y": 20
-        }
-      }
-    },
-    {
-      "name": "test3",
-      "point": 3,
-      "difficulty" : 1,
-      "PAction": {
-        "start":{
-          "x": 3000,
-          "y": 1260
-        }
-      }
-    },
-    {
-      "name": "test4",
+      "name": "Move1",
+      "action": 0,
       "point": 20,
       "difficulty" : 1,
       "PAction": {
         "start":{
-          "x": 1000,
-          "y": 500
+          "x": 235,
+          "y": 860
+        }
+      }
+    },
+    {
+      "name": "Move2",
+      "action": 0,
+      "point": 20,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 850,
+          "y": 850
+        }
+      }
+    },
+    {
+      "name": "Move3",
+      "action": 0,
+      "point": 20,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 1200,
+          "y": 200
         }
       }
     }
