update CMakelist & package

--- a/src/procedures/block/package.xml
+++ b/src/procedures/block/package.xml
@@ -63,6 +63,9 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+    <depend>controller</depend>
+    <depend>move</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
