added new action pliers msg

--- a/src/ros_can/can_msgs/CMakeLists.txt
+++ b/src/ros_can/can_msgs/CMakeLists.txt
@@ -19,6 +19,7 @@ add_message_files(DIRECTORY msg
     Status.msg
     STMParam.msg
     WheelsDistance.msg
+    ActionPliers.msg
 )
 
 generate_messages(
