--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -35,6 +35,25 @@
           "y": 1200
         }
       }
+    },
+    {
+      "name": "Block",
+      "action": 1,
+      "point": 20,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 200,
+          "y": 1200,
+          "angle": 0
+
+        },
+        "end":{
+          "x": 10,
+          "y": 10,
+          "angle": 3141
+        }
+      }
     }
   ]
 }
