created action block in config

--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -37,22 +37,60 @@
       }
     },
     {
-      "name": "Block",
+      "name": "Block1",
+      "action": 1,
+      "point": 15,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 850,
+          "y": 540,
+          "angle": 3141
+
+        },
+        "end":{
+          "x": 470,
+          "y": 50,
+          "angle": 3141
+        },
+      }
+    },
+    {
+      "name": "Block2",
+      "action": 1,
+      "point": 15,
+      "difficulty" : 1,
+      "PAction": {
+        "start":{
+          "x": 300,
+          "y": 1190,
+          "angle": 1571
+
+        },
+        "end":{
+          "x": 640,
+          "y": 50,
+          "angle": 3141
+        },
+      }
+    },
+    {
+      "name": "Block3",
       "action": 1,
       "point": 20,
       "difficulty" : 1,
       "PAction": {
         "start":{
-          "x": 200,
-          "y": 1200,
-          "angle": 0
+          "x": 1100,
+          "y": 1500,
+          "angle": 3141
 
         },
         "end":{
-          "x": 10,
-          "y": 10,
+          "x": 810,
+          "y": 50,
           "angle": 3141
-        }
+        },
       }
     }
   ]
