--- a/src/ai/controller/CMakeLists.txt
+++ b/src/ai/controller/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
   robot_watcher
   can_msgs
   robot_interface
+  pliers
 )
 
 ## System dependencies are found with CMake's conventions
@@ -110,7 +111,8 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES controller
-  CATKIN_DEPENDS actionlib roscpp rospy std_msgs
+  CATKIN_DEPENDS actionlib roscpp rospy std_msgs pliers
+
 #  DEPENDS system_lib
 )
 
