update scheduler for ball procedure

--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -1,5 +1,6 @@
 {
-	"actions": [{
+	"actions": [
+		{
 			"name": "Move1",
 			"action": 0,
 			"point": 20,
@@ -91,6 +92,26 @@
 					"angle": 3141
 				}
 			}
+		},
+		{
+			"name": "balls1",
+			"action": 3,
+			"point": 20,
+			"difficulty": 1,
+			"PAction": {
+				"start": {
+					"x": 0,
+					"y": 840,
+					"angle": 0
+				},
+				"end": {
+					"x": 810,
+					"y": 50,
+					"angle": 3141
+				}
+			},
+			"_comment" : "[alpha, delta_y]",
+			"param" : [261, 350]
 		}
 	]
 }
