--- a/src/ai/controller/CMakeLists.txt
+++ b/src/ai/controller/CMakeLists.txt
@@ -110,7 +110,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-#  LIBRARIES controller
+  LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS actionlib roscpp rospy std_msgs pliers
 
 #  DEPENDS system_lib
@@ -128,14 +128,18 @@ include_directories(
 )
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/controller.cpp
-# )
+ add_library(${PROJECT_NAME}
+  src/OrientedPoint.cpp
+ )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ #add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+ add_dependencies(${PROJECT_NAME}
+   ${catkin_EXPORTED_TARGETS}
+ )
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
@@ -154,6 +158,10 @@ include_directories(
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(${PROJECT_NAME}_node
+   ${catkin_LIBRARIES}
+ )
+
+ target_link_libraries(${PROJECT_NAME}
    ${catkin_LIBRARIES}
  )
 
