changed action pose

--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -43,14 +43,14 @@
 			"difficulty": 1,
 			"PAction": {
 				"start": {
-					"x": 850,
-					"y": 540,
-					"angle": 3141
+					"x": 540,
+					"y": 850,
+					"angle": 0
 
 				},
 				"end": {
-					"x": 470,
-					"y": 50,
+					"x": 50,
+					"y": 470,
 					"angle": 3141
 				}
 			}
@@ -62,14 +62,14 @@
 			"difficulty": 1,
 			"PAction": {
 				"start": {
-					"x": 300,
-					"y": 1190,
-					"angle": 1571
+					"x": 1190,
+					"y": 300,
+					"angle": 3141
 
 				},
 				"end": {
-					"x": 640,
-					"y": 50,
+					"x": 50,
+					"y": 640,
 					"angle": 3141
 				}
 			}
@@ -81,14 +81,13 @@
 			"difficulty": 1,
 			"PAction": {
 				"start": {
-					"x": 1100,
-					"y": 1500,
-					"angle": 3141
-
+					"x": 1500,
+					"y": 1100,
+					"angle": 1571
 				},
 				"end": {
-					"x": 810,
-					"y": 50,
+					"x": 50,
+					"y": 810,
 					"angle": 3141
 				}
 			}
@@ -100,11 +99,12 @@
 			"difficulty": 1,
 			"PAction": {
 				"start": {
-					"x": 0,
-					"y": 840,
+					"x": 840,
+					"y": 0,
 					"angle": 0
 				},
 				"end": {
+					"_comment" : "to determind",
 					"x": 810,
 					"y": 50,
 					"angle": 3141
