renamed 2Dpoint into Point2D

--- a/src/ai/ai_msgs/CMakeLists.txt
+++ b/src/ai/ai_msgs/CMakeLists.txt
@@ -15,7 +15,7 @@ add_message_files(DIRECTORY msg
   RobotStatus.msg
   SetSide.msg
   EmergencyStop.msg
-  2Dpoint.msg
+  Point2D.msg
 )
 
 add_service_files(
