--- a/src/ai/scheduler/include/scheduler/actions.config
+++ b/src/ai/scheduler/include/scheduler/actions.config
@@ -55,6 +55,26 @@
 					"angle": 3141
 				}
 			}
+		},
+		{
+			"name": "ball1",
+			"action": 3,
+			"point": 20,
+			"difficulty": 100,
+			"PAction": {
+				"start": {
+					"x": 0,
+					"y": 840,
+					"angle": 0
+				},
+				"end": {
+					"x": 50,
+					"y": 890,
+					"angle": 3141
+				}
+			},
+			"_comment" : "[alpha, delta_y]",
+			"param" : [261,350]
 		}
 	]
 }
