--- a/src/ai/scheduler/include/scheduler/actions0.config
+++ b/src/ai/scheduler/include/scheduler/actions0.config
@@ -35,7 +35,7 @@
 			"difficulty": 100,
 			"PAction": {
 				"start": {
-					"x": 310,
+					"x": 280,
 					"y": 850,
 					"angle": -3141
 
@@ -49,12 +49,26 @@
 			"difficulty": 200,
 			"PAction": {
 				"start": {
-					"x": 500,
+					"x": 700,
 					"y": 850,
 					"angle": -3141
 
 				}
 			}
-		}
+		},
+{
+                        "name": "MOVE5",
+                        "action": 0,
+                        "point": 15,
+                        "difficulty": 400,
+                        "PAction": {
+                                "start": {
+                                        "x": 300,
+                                        "y": 300,
+                                        "angle": 0
+
+                                }
+                        }
+                }
 	]
 }
