--- a/src/ai/scheduler/include/scheduler/block1.config
+++ b/src/ai/scheduler/include/scheduler/block1.config
@@ -1,23 +1,47 @@
 {
 	"actions": [
 		{
-			"name": "Block1",
-			"action": 1,
+			"name": "MOVE1",
+			"action": 0,
 			"point": 15,
 			"difficulty": 1,
 			"PAction": {
 				"start": {
-					"x": 540,
-					"y": 850,
-					"angle": 0
+					"x": 330,
+					"y": 1130,
+					"angle": -3141
 
-				},
-				"end": {
-					"x": 60,
-					"y": 475,
-					"angle": 3141
+				}
+			}
+		},
+		{
+			"name": "MOVE2",
+			"action": 0,
+			"point": 15,
+			"difficulty": 10,
+			"PAction": {
+				"start": {
+					"x": 180,
+					"y": 1130,
+					"angle": -3141
+
+				}
+			}
+		},
+		{
+			"name": "MOVE3",
+			"action": 0,
+			"point": 15,
+			"difficulty": 50,
+			"PAction": {
+				"start": {
+					"x": 330,
+					"y": 1130,
+					"angle": -3141
+
 				}
 			}
 		}
 	]
 }
+
