added timeout var in JSON

--- a/src/ai/scheduler/include/scheduler/block1.config
+++ b/src/ai/scheduler/include/scheduler/block1.config
@@ -12,7 +12,9 @@
 					"angle": -3141
 
 				}
-			}
+				},
+				"_comment" : "[timeout]",
+				"param" : [0]
 		},
 		{
 			"name": "MOVE2",
@@ -26,7 +28,9 @@
 					"angle": -3141
 
 				}
-			}
+			},
+			"_comment" : "[timeout]",
+			"param" : [10]
 		},
 		{
 			"name": "MOVE3",
@@ -40,8 +44,9 @@
 					"angle": -3141
 
 				}
-			}
+				},
+				"_comment" : "[timeout]",
+				"param" : [0]
 		}
 	]
 }
-
