--- a/src/ai/scheduler/include/scheduler/final2.config
+++ b/src/ai/scheduler/include/scheduler/final2.config
@@ -62,7 +62,7 @@
 			}
 		},
 		"_comment" : "[timeout]",
-		"param" : [0]
+		"param" : [5]
 	},
 	{
 		"name": "PUSH_CUBE1",
@@ -119,7 +119,7 @@
 			"difficulty": 70,
 			"PAction": {
 				"start": {
-					"x": 170,
+					"x": 180,
 					"y": 1150,
 					"angle": -3141
 
@@ -143,6 +143,70 @@
 				},
 				"_comment" : "[timeout]",
 				"param" : [0]
+		},
+		{
+			"name": "MOVE1_CUBE2",
+			"action": 0,
+			"point": 1,
+			"difficulty": 90,
+			"PAction": {
+				"start": {
+					"x": 1500,
+					"y": 1200,
+					"angle": -1571
+
+				}
+			},
+			"_comment" : "[timeout]",
+			"param" : [0]
+		},
+		{
+                        "name": "MOVE2_CUBE2",
+                        "action": 0,
+                        "point": 1,
+                        "difficulty": 90,
+                        "PAction": {
+                                "start": {
+                                        "x": 1700,
+                                        "y": 250,
+                                        "angle": -3141
+
+                                }
+                        },
+                        "_comment" : "[timeout]",
+                        "param" : [0]
+                },
+		{
+			"name": "PUSH2_CUBE2",
+			"action": 0,
+			"point": 1,
+			"difficulty": 100,
+			"PAction": {
+				"start": {
+					"x": 180,
+					"y": 650,
+					"angle": -3141
+
+				}
+			},
+			"_comment" : "[timeout]",
+			"param" : [0]
+		},
+		{
+			"name": "BACK_CUBE2",
+			"action": 0,
+			"point": 1,
+			"difficulty": 110,
+			"PAction": {
+				"start": {
+					"x": 600,
+					"y": 650,
+					"angle": -3141
+
+				}
+			},
+			"_comment" : "[timeout]",
+			"param" : [0]
 		},
 		{
 			"name": "RESET2",
