--- a/src/ai/robot_watcher/package.xml
+++ b/src/ai/robot_watcher/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>robot_watcher</name>
-  <version>0.0.0</version>
+  <version>2018.1.0</version>
   <description>The robot_watcher package
     Code deeply insparied by UTcoup 2018's code</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="robotik@todo.todo">robotik</maintainer>
+  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -26,7 +26,7 @@
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="alx.care@gmail.com">Alexis CARE</author>
 
 
   <buildtool_depend>catkin</buildtool_depend>
