--- a/src/procedures/block/package.xml
+++ b/src/procedures/block/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>block</name>
-  <version>0.0.0</version>
+  <version>2018.1.0</version>
   <description>The block package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="thenewby@todo.todo">thenewby</maintainer>
+  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -25,7 +25,7 @@
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="alx.care@gmail.com">Alexis CARE</author>
 
 
   <!-- The *depend tags are used to specify dependencies -->
