Fixed dependencies issue, README update

--- a/src/procedures/pliers/package.xml
+++ b/src/procedures/pliers/package.xml
@@ -63,6 +63,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <depend>controller</depend>
   <depend>robot_watcher</depend>
 
 
