--- a/src/ai/controller/CMakeLists.txt
+++ b/src/ai/controller/CMakeLists.txt
@@ -16,7 +16,6 @@ find_package(catkin REQUIRED COMPONENTS
   robot_watcher
   can_msgs
   robot_interface
-  pliers
 )
 
 ## System dependencies are found with CMake's conventions
@@ -111,7 +110,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS actionlib roscpp rospy std_msgs pliers
+  CATKIN_DEPENDS actionlib roscpp rospy std_msgs
 
 #  DEPENDS system_lib
 )
