--- a/src/ai/scheduler/package.xml
+++ b/src/ai/scheduler/package.xml
@@ -8,6 +8,7 @@
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
+  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
