--- a/src/ai/action_manager/package.xml
+++ b/src/ai/action_manager/package.xml
@@ -60,6 +60,7 @@
   <exec_depend>std_msgs</exec_depend>
 
   <depend>actionlib</depend>
+  <depend>procedures_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
