--- a/src/procedures/procedures_msgs/CMakeLists.txt
+++ b/src/procedures/procedures_msgs/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(procedures_msgs)
+
 find_package(catkin REQUIRED COMPONENTS
   actionlib_msgs
   message_generation
@@ -42,11 +43,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
- add_message_files(
-   FILES
-   MPoint.msg
-   OrPoint.msg
- )
+add_message_files(
+  FILES
+  MPoint.msg
+  OrPoint.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -56,15 +57,21 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
- add_action_files(
-   FILES
-   Move.action
- )
+add_action_files(
+  FILES
+  Move.action
+)
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   actionlib_msgs
-   can_msgs
-   std_msgs
- )
+generate_messages(
+  DEPENDENCIES
+  actionlib_msgs
+  can_msgs
+  std_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS
+  message_runtime
+  std_msgs
+)
