--- a/src/procedures/reach/package.xml
+++ b/src/procedures/reach/package.xml
@@ -59,8 +59,10 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <depend>can_msgs</depend>
   <depend>ai_msgs</depend>
   <depend>action_manager</depend>
+  <depend>robot_interface</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
