--- a/src/ai/scheduler/CMakeLists.txt
+++ b/src/ai/scheduler/CMakeLists.txt
@@ -2,18 +2,16 @@ cmake_minimum_required(VERSION 2.8.3)
 project(scheduler)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
- add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  rospy
   std_msgs
   ai_msgs
   robot_watcher
-  controller
   action_manager
 )
 
@@ -40,7 +38,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES scheduler
-  CATKIN_DEPENDS roscpp rospy robot_watcher ai_msgs std_msgs controller action_manager
+  CATKIN_DEPENDS roscpp ai_msgs std_msgs action_manager
 #  DEPENDS system_lib
 )
 
@@ -68,26 +66,26 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
- add_executable(${PROJECT_NAME}_node src/scheduler_node.cpp)
+add_executable(${PROJECT_NAME}_node src/scheduler_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
- set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
- add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(${PROJECT_NAME}_node
-   ${catkin_LIBRARIES}
- )
+target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+)
 
- target_link_libraries(${PROJECT_NAME}_node
-   ${PROJECT_NAME}
- )
+target_link_libraries(${PROJECT_NAME}_node
+  ${PROJECT_NAME}
+)
 #############
 ## Install ##
 #############
@@ -135,8 +133,9 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
-  add_rostest_gtest(tests_scheduler launch/scheduler.test src/test/parsing.cpp)
+  add_rostest_gtest(tests_scheduler scheduler.test src/test/parsing_test.cpp)
   target_link_libraries(tests_scheduler ${catkin_LIBRARIES})
+  target_link_libraries(tests_scheduler ${PROJECT_NAME})
 endif()
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
