--- a/src/ai/robot_watcher/package.xml
+++ b/src/ai/robot_watcher/package.xml
@@ -2,44 +2,20 @@
 <package format="2">
   <name>robot_watcher</name>
   <version>2018.1.0</version>
-  <description>The robot_watcher package
-    Code deeply insparied by UTcoup 2018's code</description>
+  <description>The robot_watcher package (Code deeply insparied by UTcoup 2018's code)</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
-
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
-
-
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/robot_watcher</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
   <author email="alx.care@gmail.com">Alexis CARE</author>
 
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <depend>roscpp</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>ai_msgs</depend>
-  <exec_depend>message_runtime</exec_depend>
 
 
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
+  <export></export>
 </package>
