created function to determine action to perform

--- a/src/ai/ai_msgs/CMakeLists.txt
+++ b/src/ai/ai_msgs/CMakeLists.txt
@@ -33,6 +33,7 @@ add_service_files(
   CurrentActionDone.srv
   ObjectManager.srv
   ComputeActionPoint.srv
+  SetSchedulerState.srv
 )
 
 # Actions files
