--- a/src/ai/scheduler/CMakeLists.txt
+++ b/src/ai/scheduler/CMakeLists.txt
@@ -34,7 +34,7 @@ include_directories(
 
 
 # Declare a C++ executable
-add_executable(${PROJECT_NAME}_node src/scheduler_node.cpp src/ActionsParser.cpp src/ActionFilePath.cpp)
+add_executable(${PROJECT_NAME}_node src/scheduler_node.cpp src/ActionsParser.cpp src/ActionFilePath.cpp src/ActionTools.cpp)
 
 # Rename C++ executable without prefix
 set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
