--- a/src/ai/scheduler/package.xml
+++ b/src/ai/scheduler/package.xml
@@ -20,5 +20,8 @@
   <!-- Messages -->
   <depend>ai_msgs</depend>
 
+  <!-- Testing -->
+  <test_depend>std_msgs</test_depend>
+
   <export></export>
 </package>
