--- a/src/ai/action_manager/package.xml
+++ b/src/ai/action_manager/package.xml
@@ -15,6 +15,7 @@
   <!-- Packages -->
   <depend>actionlib</depend>
   <depend>robot_watcher</depend>
+  <depend>node_watcher</depend>
 
   <!-- Messages -->
   <depend>ai_msgs</depend>
