--- a/src/ai/robot_watcher/package.xml
+++ b/src/ai/robot_watcher/package.xml
@@ -15,7 +15,7 @@
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>ai_msgs</depend>
-
+  <depend>node_watcher</depend>
 
   <export></export>
 </package>
