--- a/src/ai/controller/package.xml
+++ b/src/ai/controller/package.xml
@@ -16,6 +16,7 @@
   <!-- Packages -->
   <depend>actionlib</depend>
   <depend>robot_watcher</depend>
+  <depend>node_watcher</depend>
   <depend>robot_interface</depend>
 
   <!-- Messages -->
