client side code for waiting nodes

--- a/src/ai/node_watcher/CMakeLists.txt
+++ b/src/ai/node_watcher/CMakeLists.txt
@@ -8,6 +8,7 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
   # ROS c++ dependencies
   roscpp
+  roslib
 
   # Required messages
   ai_msgs
