--- a/src/procedures/reach/package.xml
+++ b/src/procedures/reach/package.xml
@@ -12,6 +12,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
 
+  <!-- Message dependencies -->
+  <depend>can_msgs</depend>
+
   <!-- Packages -->
   <depend>action_manager</depend>
   <depend>robot_interface</depend>
